<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group>
        <item android:title="Kepesertaan">
            <menu>
                <item
                    android:id="@+id/nav_daftar"
                    android:icon="@drawable/ic_insert_drive_file_black_24dp"
                    android:title="@string/daftar_seleksi" />
                <item
                    android:id="@+id/nav_ikut"
                    android:icon="@drawable/ic_assignment_black_24dp"
                    android:title="@string/lihat_rekruitasi" />

            </menu>
        </item>
        <item android:title="Profil">
            <menu>
                <item
                    android:id="@+id/nav_akun"
                    android:icon="@drawable/ic_account_circle_black_24dp"
                    android:title="@string/menu_account" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_report_black_24dp"
                    android:title="@string/menu_about" />
                <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/ic_exit_to_app_black_24dp"
                    android:title="@string/menu_exit" />
            </menu>
        </item>

    </group>

</menu>

